--- a/hello_flask/templates/index.html
+++ b/hello_flask/templates/index.html
@@ -46,7 +46,7 @@
         </div>
       </nav>
       
-    <h1>DAFA students are awesome</h1>
+    <h1>The DAFA students are awesome</h1>
 
     {{data}}
 
